--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@sentry/node": "^8.5.0",
     "@sentry/profiling-node": "^8.5.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
