--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@sentry/node": "^8.5.0",
     "@sentry/profiling-node": "^8.5.0",
+    "@webeleon/nestjs-redis": "^0.1.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -47,6 +48,8 @@
     "cross-var": "^1.1.0",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
